@@ -145,6 +145,8 @@ switch ($CURR_SECTION)
     // switch skin (if valid, otherwise unset the pref and fall back to default)
     if (!$OUTPUT->set_skin($a_user_prefs['skin']))
       unset($a_user_prefs['skin']);
+    else if ($RCMAIL->config->get('skin') != $a_user_prefs['skin'])
+      $OUTPUT->command('reload', 500);
 
     // force min size
     if ($a_user_prefs['pagesize'] < 1)
